--- a/WebContent/WEB-INF/commandPro.properties
+++ b/WebContent/WEB-INF/commandPro.properties
@@ -10,6 +10,8 @@
 /admin/NoticeView.do=com.mvc.action.admin.NoticeViewAction.java
 /admin/ShopList.do=com.mvc.action.admin.ShopListAction.java
 /admin/ShopView.do=com.mvc.action.admin.ShopViewAction.java
+/admin/ShopPage.do=com.mvc.action.admin.ShopPageAction.java
+
 
 /baemin/Main.do=com.mvc.action.baemin.MainAction.java
 /baemin/Order.do=com.mvc.action.baemin.OrderAction.java
