--- a/WebContent/WEB-INF/commandPro.properties
+++ b/WebContent/WEB-INF/commandPro.properties
@@ -1,48 +1,83 @@
-/admin/Main.do=com.mvc.action.admin.MainAction.java
-/admin/MemberList.do=com.mvc.action.admin.MemberListAction.java
-/admin/MemberView.do=com.mvc.action.admin.MemberViewAction.java
-/admin/NoticeDeletePro.do=com.mvc.action.admin.NoticeDeleteProAction.java
-/admin/NoticeInputForm.do=com.mvc.action.admin.NoticeInputFormAction.java
-/admin/NoticeInputPro.do=com.mvc.action.admin.NoticeInputProAction.java
-/admin/NoticeList.do=com.mvc.action.admin.NoticeListAction.java
-/admin/NoticeUpdateForm.do=com.mvc.action.admin.NoticeUpdateFormAction.java
-/admin/NoticeUpdatePro.do=com.mvc.action.admin.NoticeUpdateProAction.java
-/admin/NoticeView.do=com.mvc.action.admin.NoticeViewAction.java
-/admin/ShopList.do=com.mvc.action.admin.ShopListAction.java
-/admin/ShopView.do=com.mvc.action.admin.ShopViewAction.java
-/admin/ShopPage.do=com.mvc.action.admin.ShopPageAction.java
 
 
-/baemin/Main.do=com.mvc.action.baemin.MainAction.java
-/baemin/Order.do=com.mvc.action.baemin.OrderAction.java
-/baemin/OrderDone.do=com.mvc.action.baemin.OrderDoneAction.java
-/baemin/OrderPro.do=com.mvc.action.baemin.OrderProAction.java
-/baemin/ShopList.do=com.mvc.action.baemin.ShopListAction.java
-/baemin/ShopListContent.do=com.mvc.action.baemin.ShopListContentAction.java
-/baemin/Cart.do=com.mvc.action.baemin.CartAction.java
+/admin/Main.do=com.mvc.action.admin.MainAction
+/admin/MemberList.do=com.mvc.action.admin.MemberListAction
+/admin/MemberView.do=com.mvc.action.admin.MemberViewAction
+/admin/NoticeDeletePro.do=com.mvc.action.admin.NoticeDeleteProAction
+/admin/NoticeInputForm.do=com.mvc.action.admin.NoticeInputFormAction
+/admin/NoticeInputPro.do=com.mvc.action.admin.NoticeInputProAction
+/admin/NoticeList.do=com.mvc.action.admin.NoticeListAction
+/admin/NoticeUpdateForm.do=com.mvc.action.admin.NoticeUpdateFormAction
+/admin/NoticeUpdatePro.do=com.mvc.action.admin.NoticeUpdateProAction
+/admin/NoticeView.do=com.mvc.action.admin.NoticeViewAction
+/admin/ShopList.do=com.mvc.action.admin.ShopListAction
+/admin/ShopView.do=com.mvc.action.admin.ShopViewAction
 
-/memberClient/idCheck.do=com.mvc.action.memberclient.IdCheckAction.java
-/memberClient/joinClientPro.do=com.mvc.action.memberclient.JoinClientProAction.java
-/memberClient/JoinFormClient.do=com.mvc.action.memberclient.JoinFormClientAction.java
-/memberClient/loginClientPro.do=com.mvc.action.memberclient.LoginClientProAction.java
-/memberClient/MyPageClient.do=com.mvc.action.memberclient.MyPageClientAction.java
 
-/memberShop/idCheck.do=com.mvc.action.membershop.IdCheckAction.java
-/memberShop/joinShopPro.do=com.mvc.action.membershop.JoinShopProAction.java
-/memberShop/JoinFormShop.do=com.mvc.action.membershop.JoinFormShopAction.java
-/memberShop/loginShopPro.do=com.mvc.action.membershop.LoginShopProAction.java
-/memberShop/MyPageShop.do=com.mvc.action.membershop.MyPageShopAction.java
 
-/notice/NoticeList.do=com.mvc.action.notice.NoticeListAction.java
-/notice/NoticeView.do=com.mvc.action.notice.NoticeViewAction.java
 
-/shop/BaesongList.do=com.mvc.action.shop.BaesongListAction.java
-/shop/BaesongSelect.do=com.mvc.action.shop.BaesongSelectAction.java
-/shop/Business_START.do=com.mvc.action.shop.Business_STARTAction.java
-/shop/Business_END.do=com.mvc.action.shop.Business_ENDAction.java
-/shop/CancelOrderPro.do=com.mvc.action.shop.CancelOrderProAction.java
-/shop/CheckNewOrder.do=com.mvc.action.shop.CheckNewOrderAction.java
-/shop/CheckOrderPro.do=com.mvc.action.shop.CheckOrderProAction.java
-/shop/EndList.do=com.mvc.action.shop.EndListAction.java
-/shop/Main.do=com.mvc.action.shop.MainAction.java
-/shop/NewOrderList.do=com.mvc.action.shop.NewOrderListAction.java
+
+
+
+/baemin/Main.do=com.mvc.action.baemin.MainAction
+/baemin/Order.do=com.mvc.action.baemin.OrderAction
+/baemin/OrderDone.do=com.mvc.action.baemin.OrderDoneAction
+/baemin/OrderPro.do=com.mvc.action.baemin.OrderProAction
+/baemin/ShopList.do=com.mvc.action.baemin.ShopListAction
+/baemin/ShopListContent.do=com.mvc.action.baemin.ShopListContentAction
+/baemin/Cart.do=com.mvc.action.baemin.CartAction
+/baemin/ShopList.do=com.mvc.action.baemin.ShopListAction
+
+
+
+
+/memberClient/idCheck.do=com.mvc.action.memberclient.idCheckAction
+/memberClient/joinClientPro.do=com.mvc.action.memberclient.joinClientProAction
+/memberClient/JoinFormClient.do=com.mvc.action.memberclient.JoinFormClientAction
+/memberClient/loginClientPro.do=com.mvc.action.memberclient.loginClientProAction
+/memberClient/MyPageClient.do=com.mvc.action.memberclient.MyPageClientAction
+
+
+
+
+
+
+
+/memberShop/idCheck.do=com.mvc.action.membershop.idCheckAction
+/memberShop/joinShopPro.do=com.mvc.action.membershop.joinShopProAction
+/memberShop/JoinFormShop.do=com.mvc.action.membershop.JoinFormShopAction
+
+
+
+
+
+/memberShop/loginShopPro.do=com.mvc.action.membershop.loginShopProAction
+/memberShop/MyPageShop.do=com.mvc.action.membershop.MyPageShopAction
+
+
+
+
+
+
+
+/notice/NoticeList.do=com.mvc.action.notice.NoticeListAction
+/notice/NoticeView.do=com.mvc.action.notice.NoticeViewAction
+
+
+
+
+
+
+/shop/BaesongList.do=com.mvc.action.shop.BaesongListAction
+/shop/BaesongSelect.do=com.mvc.action.shop.BaesongSelectAction
+/shop/Business_START.do=com.mvc.action.shop.Business_STARTAction
+/shop/Business_END.do=com.mvc.action.shop.Business_ENDAction
+/shop/CancelOrderPro.do=com.mvc.action.shop.CancelOrderProAction
+/shop/CheckNewOrder.do=com.mvc.action.shop.CheckNewOrderAction
+/shop/CheckOrderPro.do=com.mvc.action.shop.CheckOrderProAction
+/shop/EndList.do=com.mvc.action.shop.EndListAction
+/shop/Main.do=com.mvc.action.shop.MainAction
+/shop/NewOrderList.do=com.mvc.action.shop.NewOrderListAction
+
+
+/util/logout.do=com.mvc.action.util.logoutAction
