--- a/WebContent/WEB-INF/commandPro.properties
+++ b/WebContent/WEB-INF/commandPro.properties
@@ -1,5 +1,3 @@
-
-
 /admin/Main.do=com.mvc.action.admin.MainAction
 /admin/MemberList.do=com.mvc.action.admin.MemberListAction
 /admin/MemberView.do=com.mvc.action.admin.MemberViewAction
@@ -13,12 +11,10 @@
 /admin/ShopList.do=com.mvc.action.admin.ShopListAction
 /admin/ShopView.do=com.mvc.action.admin.ShopViewAction
 
-
-
-
-
-
-
+/baemin/NoticeList.do=com.mvc.action.baemin.NoticeListAction
+/baemin/ReviewWritePro.do=com.mvc.action.baemin.ReviewWriteProAction
+/baemin/ShopPage.do=com.mvc.action.baemin.ShopPageAction
+/baemin/UpdateCartPro.jsp=com.mvc.action.baemin.UpdateCartProAction
 /baemin/Main.do=com.mvc.action.baemin.MainAction
 /baemin/Order.do=com.mvc.action.baemin.OrderAction
 /baemin/OrderDone.do=com.mvc.action.baemin.OrderDoneAction
@@ -27,57 +23,56 @@
 /baemin/ShopListContent.do=com.mvc.action.baemin.ShopListContentAction
 /baemin/Cart.do=com.mvc.action.baemin.CartAction
 /baemin/ShopList.do=com.mvc.action.baemin.ShopListAction
+/baemin/AddCartPro.do=com.mvc.action.baemin.AddCartProAction
+/baemin/CartContent.do=com.mvc.action.baemin.CartContentAction
 
-
-
-
-/memberClient/idCheck.do=com.mvc.action.memberclient.idCheckAction
-/memberClient/joinClientPro.do=com.mvc.action.memberclient.joinClientProAction
-/memberClient/JoinFormClient.do=com.mvc.action.memberclient.JoinFormClientAction
-/memberClient/loginClientPro.do=com.mvc.action.memberclient.loginClientProAction
+/memberClient/AddrChangeForm.do=com.mvc.action.memberclient.AddrChangeFormAction
+/memberClient/ChangeAddrPro.do=com.mvc.action.memberclient.ChangeAddrProAction
 /memberClient/MyPageClient.do=com.mvc.action.memberclient.MyPageClientAction
+/memberClient/UpdateClientForm.do=com.mvc.action.memberclient.UpdateClientFormAction
+/memberClient/UpdateClientPro.do=com.mvc.action.memberclient.UpdateClientProAction
 
+/z_sample/check.do=com.mvc.action.z_sample.checkAction
+/z_sample/check2.do=com.mvc.action.z_sample.check2Action
 
-
-
-
-
-
-/memberShop/idCheck.do=com.mvc.action.membershop.idCheckAction
-/memberShop/joinShopPro.do=com.mvc.action.membershop.joinShopProAction
-/memberShop/JoinFormShop.do=com.mvc.action.membershop.JoinFormShopAction
-
-
-
-
+/memberShop/MyPageShop.do=com.mvc.action.membershop.MyPageShopAction
+/memberShop/UpdateShopPro.do=com.mvc.action.membershop.UpdateShopProAction
 
 /memberShop/loginShopPro.do=com.mvc.action.membershop.loginShopProAction
 /memberShop/MyPageShop.do=com.mvc.action.membershop.MyPageShopAction
 
-
-
-
-
-
+/sw_css/admintopnav.do=com.mvc.action.sw_css.admintopnavAction
+/sw_css/memberTopNav.do=com.mvc.action.sw_css.memberTopNavAction
+/sw_css/topnav.do=com.mvc.action.sw_css.topnavAction
 
 /notice/NoticeList.do=com.mvc.action.notice.NoticeListAction
 /notice/NoticeView.do=com.mvc.action.notice.NoticeViewAction
 
-
-
-
-
-
+/shop/NoticeView.do=com.mvc.action.shop.NoticeViewAction
+/shop/NoticeList.do=com.mvc.action.shop.NoticeListAction
+/shop/MenuStatusPro.do=com.mvc.action.shop.MenuStatusProAction
+/shop/AddMenuPro.do=com.mvc.action.shop.AddMenuProAction
+/shop/CancelList.do=com.mvc.action.shop.CancelListAction
 /shop/BaesongList.do=com.mvc.action.shop.BaesongListAction
 /shop/BaesongSelect.do=com.mvc.action.shop.BaesongSelectAction
-/shop/Business_START.do=com.mvc.action.shop.Business_STARTAction
-/shop/Business_END.do=com.mvc.action.shop.Business_ENDAction
+/shop/ShopManage.do=com.mvc.action.shop.ShopManageAction
+/shop/ShopOpenPro.do=com.mvc.action.shop.ShopOpenProAction
 /shop/CancelOrderPro.do=com.mvc.action.shop.CancelOrderProAction
 /shop/CheckNewOrder.do=com.mvc.action.shop.CheckNewOrderAction
 /shop/CheckOrderPro.do=com.mvc.action.shop.CheckOrderProAction
 /shop/EndList.do=com.mvc.action.shop.EndListAction
 /shop/Main.do=com.mvc.action.shop.MainAction
 /shop/NewOrderList.do=com.mvc.action.shop.NewOrderListAction
-
-
+/shop/Reload.do=com.mvc.action.shop.ReloadAction
+/shop/reviewList.do=com.mvc.action.shop.reviewListAction
 /util/logout.do=com.mvc.action.util.logoutAction
+
+/joinClient/idCheck.do=com.mvc.action.joinClient.idCheckAction.java
+/joinClient/joinClientPro.do=com.mvc.action.joinClient.joinClientProAction.java
+/joinClient/JoinFormCilent.do=com.mvc.action.joinClient.JoinFormCilentAction.java
+/joinClient/loginClientPro.do=com.mvc.action.joinClient.loginClientProAction.java
+
+/joinShop/idCheck.do=com.mvc.action.joinShop.idCheckAction.java
+/joinShop/JoinFormShop.do=com.mvc.action.joinShop.JoinFormShopAction.java
+/joinShop/joinShopPro.do=com.mvc.action.joinShop.joinShopProAction.java
+/joinShop/loginShopPro.do=com.mvc.action.joinShop.loginShopProAction.java
