--- a/WebContent/WEB-INF/commandPro.properties
+++ b/WebContent/WEB-INF/commandPro.properties
@@ -64,7 +64,7 @@
 /shop/Main.do=com.mvc.action.shop.MainAction
 /shop/NewOrderList.do=com.mvc.action.shop.NewOrderListAction
 /shop/Reload.do=com.mvc.action.shop.ReloadAction
-/shop/reviewList.do=com.mvc.action.shop.reviewListAction
+/shop/ReviewList.do=com.mvc.action.shop.ReviewListAction
 /util/logout.do=com.mvc.action.util.logoutAction
 
 /joinClient/idCheck.do=com.mvc.action.joinClient.idCheckAction.java
