모든파일대문자

--- a/WebContent/WEB-INF/commandPro.properties
+++ b/WebContent/WEB-INF/commandPro.properties
@@ -14,7 +14,7 @@
 /baemin/NoticeList.do=com.mvc.action.baemin.NoticeListAction
 /baemin/ReviewWritePro.do=com.mvc.action.baemin.ReviewWriteProAction
 /baemin/ShopPage.do=com.mvc.action.baemin.ShopPageAction
-/baemin/UpdateCartPro.jsp=com.mvc.action.baemin.UpdateCartProAction
+/baemin/UpdateCartPro.do=com.mvc.action.baemin.UpdateCartProAction
 /baemin/Main.do=com.mvc.action.baemin.MainAction
 /baemin/Order.do=com.mvc.action.baemin.OrderAction
 /baemin/OrderDone.do=com.mvc.action.baemin.OrderDoneAction
@@ -32,18 +32,8 @@
 /memberClient/UpdateClientForm.do=com.mvc.action.memberclient.UpdateClientFormAction
 /memberClient/UpdateClientPro.do=com.mvc.action.memberclient.UpdateClientProAction
 
-/z_sample/check.do=com.mvc.action.z_sample.checkAction
-/z_sample/check2.do=com.mvc.action.z_sample.check2Action
-
 /memberShop/MyPageShop.do=com.mvc.action.membershop.MyPageShopAction
 /memberShop/UpdateShopPro.do=com.mvc.action.membershop.UpdateShopProAction
-
-/memberShop/loginShopPro.do=com.mvc.action.membershop.loginShopProAction
-/memberShop/MyPageShop.do=com.mvc.action.membershop.MyPageShopAction
-
-/sw_css/admintopnav.do=com.mvc.action.sw_css.admintopnavAction
-/sw_css/memberTopNav.do=com.mvc.action.sw_css.memberTopNavAction
-/sw_css/topnav.do=com.mvc.action.sw_css.topnavAction
 
 /notice/NoticeList.do=com.mvc.action.notice.NoticeListAction
 /notice/NoticeView.do=com.mvc.action.notice.NoticeViewAction
@@ -65,14 +55,15 @@
 /shop/NewOrderList.do=com.mvc.action.shop.NewOrderListAction
 /shop/Reload.do=com.mvc.action.shop.ReloadAction
 /shop/ReviewList.do=com.mvc.action.shop.ReviewListAction
-/util/logout.do=com.mvc.action.util.logoutAction
 
-/joinClient/idCheck.do=com.mvc.action.joinClient.idCheckAction.java
-/joinClient/joinClientPro.do=com.mvc.action.joinClient.joinClientProAction.java
-/joinClient/JoinFormCilent.do=com.mvc.action.joinClient.JoinFormCilentAction.java
-/joinClient/loginClientPro.do=com.mvc.action.joinClient.loginClientProAction.java
+/util/Logout.do=com.mvc.action.util.LogoutAction
 
-/joinShop/idCheck.do=com.mvc.action.joinShop.idCheckAction.java
-/joinShop/JoinFormShop.do=com.mvc.action.joinShop.JoinFormShopAction.java
-/joinShop/joinShopPro.do=com.mvc.action.joinShop.joinShopProAction.java
-/joinShop/loginShopPro.do=com.mvc.action.joinShop.loginShopProAction.java
+/joinClient/IdCheck.do=com.mvc.action.joinClient.IdCheckAction
+/joinClient/JoinClientPro.do=com.mvc.action.joinClient.JoinClientProAction
+/joinClient/JoinFormCilent.do=com.mvc.action.joinClient.JoinFormCilentAction
+/joinClient/LoginClientPro.do=com.mvc.action.joinClient.LoginClientProAction
+
+/joinShop/IdCheck.do=com.mvc.action.joinShop.IdCheckAction
+/joinShop/JoinFormShop.do=com.mvc.action.joinShop.JoinFormShopAction
+/joinShop/JoinShopPro.do=com.mvc.action.joinShop.JoinShopProAction
+/joinShop/LoginShopPro.do=com.mvc.action.joinShop.LoginShopProAction
