개인정보 수정 서블릿 변환 <사용자/사업자>

--- a/WebContent/WEB-INF/commandPro.properties
+++ b/WebContent/WEB-INF/commandPro.properties
@@ -34,6 +34,7 @@
 
 /memberShop/MyPageShop.do=com.mvc.action.membershop.MyPageShopAction
 /memberShop/UpdateShopPro.do=com.mvc.action.membershop.UpdateShopProAction
+/memberShop/UpdateShopForm.do=com.mvc.action.membershop.UpdateShopFormAction
 
 /notice/NoticeList.do=com.mvc.action.notice.NoticeListAction
 /notice/NoticeView.do=com.mvc.action.notice.NoticeViewAction
